--- a/Pathfinder/style.css
+++ b/Pathfinder/style.css
@@ -1,7 +1,7 @@
 body {
     padding: 0px;
     margin: 0px;
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 
 input {
@@ -28,9 +28,9 @@ h6 {
 
 .panel {
     position: fixed;
-    padding: 20px;
+    padding: 15px;
     background-color: rgba(0, 0, 0, 0.6);
-    color: #fff;
+    color: white;
     border-radius: 8px;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
     cursor: default;
@@ -70,25 +70,6 @@ h6 {
     top: 20px;
 }
 
-#instructions_panel {
-    top: 20px;
-    left: 20px;
-    width: 550px;
-}
-
-#hide_instructions {
-    position: absolute;
-    right: 25px;
-    top: 10px;
-    font-size: 90%;
-    cursor: pointer;
-}
-
-#hide_instruction:hover {
-    color: #fff;
-    text-decoration: underline;
-}
-
 .option_header {
     font-size: 80%;
     margin-left: 20px;
@@ -100,17 +81,18 @@ h6 {
 
 button {
     border: none;
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(0, 0, 0, 0.7);
     border-radius: 5px;
-    font-size: 90%;
+    font-size: 100%;
     cursor: pointer;
     padding-bottom: 0px;
     margin: 0 2%;
-    width: 28%;
+    width: 45%;
 }
 
 button:hover {
     background: rgba(255, 255, 255, 0.9);
+    color: black;
 }
 
 .finder_section {
